--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,4 +1,4 @@
-<h1>CHECK THESE OUT. (<%= @pictures.length %>)</h1>
+<h1>There are (<%= @pictures.length %>) pictures for you to look at!</h1>
 <%= link_to "New Picture", "/pictures/new" %>
 
 <% @pictures.each do |picture| %>
