--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,9 +1,10 @@
 html {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Bungee Hairline', cursive;
   font-size: 1.2em;
 }
 
 h1 {
+  font-family: 'Revalia', cursive;
   background-color: black;
   color: white;
   text-align: center;
