Still just goofing around with styles.

--- a/app/assets/stylesheets/pictures.scss
+++ b/app/assets/stylesheets/pictures.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the pictures controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+html {
+  font-family: 'Bungee Hairline', cursive;
+  font-size: 1.2em;
+}
+
+h1 {
+  font-family: 'Revalia', cursive;
+  background-color: black;
+  color: white;
+  text-align: center;
+}
+
+nav {
+  background-color: grey;
+  color: white;
+  text-align: center;
+}
