--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,8 +1,10 @@
 <h1>There are (<%= @pictures.length %>) pictures for you to look at!</h1>
 
+<div class="images">
 <% @pictures.each do |picture| %>
   <%= link_to image_tag(picture.url), "/pictures/#{picture.id}" %>
   <p><%= picture.title %>, <%= picture.artist %></p>
+</div>
 <% end %>
 
 <!-- Note to self: code is entered like you normally would, but wrapped in alligator tags when used in html. -->
