--- a/app/assets/stylesheets/pictures.scss
+++ b/app/assets/stylesheets/pictures.scss
@@ -32,9 +32,10 @@ ul {
 }
 
 a:-webkit-any-link {
-    color: white;
+    color: red;
     text-decoration: none;
     cursor: auto;
+    font-weight: bold;
   }
 
 a:hover {
